# ChangeLog for media-libs/glew
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/glew/ChangeLog,v 1.46 2009/05/05 17:01:20 armin76 Exp $

  05 May 2009; Raúl Porcel <armin76@gentoo.org> glew-1.5.1.ebuild:
  Add ~sh

  05 May 2009; Raúl Porcel <armin76@gentoo.org> glew-1.5.1.ebuild:
  arm/ia64 stable wrt #268020

  05 May 2009; Jeroen Roovers <jer@gentoo.org> glew-1.5.1.ebuild:
  Stable for HPPA (bug #268020).

  04 May 2009; Alexey Shvetsov <alexxy@gentoo.org> glew-1.5.1.ebuild:
  Mips love

  03 May 2009; Markus Meier <maekke@gentoo.org> glew-1.5.1.ebuild:
  amd64/x86 stable, bug #268020

  02 May 2009; <solar@gentoo.org> glew-1.5.1.ebuild:
  - keyword ~arm and make sure that we let portage handle the stripping

  01 May 2009; Brent Baude <ranger@gentoo.org> glew-1.5.1.ebuild:
  stable ppc64, bug 268020

  30 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -glew-1.3.5.ebuild, -glew-1.5.0.ebuild, glew-1.5.1.ebuild:
  Respect LDFLAGS (bug #267908). Remove older ebuilds.

*glew-1.5.1 (02 Dec 2008)

  02 Dec 2008; <ssuominen@gentoo.org> +glew-1.5.1.ebuild:
  Version bump, thanks to Donnie Berkholz.

  15 Jan 2008; Raúl Porcel <armin76@gentoo.org> glew-1.4.0.ebuild:
  ia64 stable wrt #197162

  11 Jan 2008; nixnut <nixnut@gentoo.org> glew-1.4.0.ebuild:
  Stable on ppc wrt bug 197162

  09 Jan 2008; Markus Meier <maekke@gentoo.org> glew-1.4.0.ebuild:
  x86 stable, bug #197162

  09 Jan 2008; Ferris McCormick <fmccor@gentoo.org> glew-1.4.0.ebuild:
  Sparc stable --- Bug #197162 --- glewinfo and visualinfo work fine.

*glew-1.5.0 (08 Jan 2008)

  08 Jan 2008; Samuli Suominen <drac@gentoo.org> +glew-1.5.0.ebuild:
  Version bump.

  16 Dec 2007; Samuli Suominen <drac@gentoo.org> glew-1.4.0.ebuild:
  Use correct AR target, amd64 stable.

  04 Dec 2007; Ferris McCormick <fmccor@gentoo.org>
  -files/glew-1.3.3-multilib.patch, -files/glew-1.3.4-makefile.patch,