@@ -1,4 +1,4 @@
 DIST glew-1.5.1-src.tgz 394566 RMD160 920fdff559976492a2e6acf93d3b02e8286f6b7b SHA1 a94113169d46487ccda1bb2fde68fa1803bdf009 SHA256 89e63d085cb563c32a191e3cd4907a192484f10438a6679f1349456db4b9c10a
-EBUILD glew-1.5.1.ebuild 1364 RMD160 ea833792d55f032df5388615bbd7826022d115e8 SHA1 899c312b5135d420dd11e3253c6afe15213700cb SHA256 cbdad30543b76794582d7de727835c42fed62afb19e9cd049b62f11d1136f8f6
-MISC ChangeLog 5791 RMD160 0fe35b520a6a6ee7d938e7edd3ad89422954dad9 SHA1 c710e0ebf6ba0a957b0782f6b91e3277cd0d021a SHA256 c2c3308c6c99e71d7ecb7b7363da9c9f10ab1f182549ad4046458ed83687c3ea
+EBUILD glew-1.5.1.ebuild 1356 RMD160 da5ca080295003658f06ee38cdd4573d614a3473 SHA1 81fb250dabc957fa1d82236cb194a3ef392a89c7 SHA256 de0dce3faed17d0e459aaec1817201a6ead73e517d18151dcc754bb53d5a056d
+MISC ChangeLog 5897 RMD160 8623a0d3ed25a2b9085289fb833856f3273486c6 SHA1 2d7208aced8e33f638ab3713618bbe9ae67adeda SHA256 2666a5463b5ce19cffa8cc76bd39326e96054592880b0ff5ca7f109509c0f6a1
 MISC metadata.xml 236 RMD160 92f49f8275e75caf57b88a3172d5204eaa4e33ae SHA1 dd1a8550a514e55ab0ed6190ab4794bb090994f8 SHA256 56075995f83836ae824c7cb01931b98d6745f6d5a7764299c8262e801486b829
