@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/glew
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/glew/ChangeLog,v 1.46 2009/05/05 17:01:20 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/glew/ChangeLog,v 1.47 2009/05/07 18:45:32 klausman Exp $
+
+  07 May 2009; Tobias Klausmann <klausman@gentoo.org> glew-1.5.1.ebuild:
+  Stable on alpha, bug #268020
 
   05 May 2009; Raúl Porcel <armin76@gentoo.org> glew-1.5.1.ebuild:
   Add ~sh
